--- a/deBrujin.cabal
+++ b/deBrujin.cabal
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Lib
+      MyDie
   other-modules:
       Paths_deBrujin
   hs-source-dirs:
