--- a/deBrujin.cabal
+++ b/deBrujin.cabal
@@ -27,10 +27,11 @@ source-repository head
 
 library
   exposed-modules:
-      DeBrujin
       MyDie
       Utilities
       ParseParameters
+      DeBrujin
+      Check
   other-modules:
       Paths_deBrujin
   hs-source-dirs:
