--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                deBrujin
+name:                deBruijn
 version:             0.1.0.0
-github:              "githubuser/deBrujin"
+github:              "githubuser/deBruijn"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -13,7 +13,7 @@ copyright:           "2019 Author name here"
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/deBrujin#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/deBruijn#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -22,7 +22,7 @@ library:
   source-dirs: src
 
 executables:
-  deBrujin:
+  deBruijn:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -30,10 +30,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - deBrujin
+    - deBruijn
 
 tests:
-  deBrujin-test:
+  deBruijn-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -41,4 +41,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - deBrujin
+    - deBruijn
