--- a/deBruijn.cabal
+++ b/deBruijn.cabal
@@ -26,6 +26,7 @@ library
   exposed-modules:
       Utilities
       IsDeBruijn
+      DifferentSequences
       ParseParameters
       DeBruijn
       Check
